--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.11",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "ai": "^3.1.7",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^15.6.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
@@ -22,5 +25,6 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "encoding": "^0.1.13"
-  }
+  },
+  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
 }
